[metadata]
name = univention-db-tools
author = Univention GmbH
author_email = packages@univention.de
description = Collect system information for support case
long_description = file: README.rst
keywords = UCS, support
;url = https://git.knut.univention.de/univention/support/univention-support-info/
license = GNU Affero General Public License v3
license_files = LICENSE
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Systems Administration

[options]
zip_safe = True
include_package_data = False
python_requires= >=3.7
packages =
    univention_db_tools
    univention_db_tools.commands
    univention_db_tools.engine

install_requires =
    click
    fabric
    pydantic

[options.entry_points]
console_scripts =
    univention-db-tools = univention_db_tools.main:main

[build_sphinx]
project = univention-db-tools
source-dir = doc
build-dir  = doc/build
all_files  = 1

[bdist_wheel]
universal=1

[flake8]
max-line-length = 220
ignore =
    # W191 indentation contains tabs
    W191,
exclude =
    build/
    dist/
    tests/
    venv/

[isort]
line_length = 220

[mypy]
python_version = 3.7
strict = true
ignore_missing_imports = true
warn_unused_configs = true
;files =
